add all scripts

--- a/notebooks/Orbit fit - make data.ipynb
+++ b/notebooks/Orbit fit - make data.ipynb
@@ -30,6 +30,7 @@
     "import emcee\n",
     "\n",
     "# Custom\n",
+    "from gary.util import atleast_2d\n",
     "import gary.coordinates as gc\n",
     "import gary.dynamics as gd\n",
     "from gary.dynamics import mockstream\n",
@@ -37,22 +38,6 @@
     "import gary.integrate as gi\n",
     "import gary.potential as gp\n",
     "from gary.units import galactic"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "x = np.logspace(-1,2,256)\n",
-    "xyz = np.zeros((3,x.size))\n",
-    "xyz[0] = x\n",
-    "for k,p in potentials.items():\n",
-    "    pl.loglog(x, p.mass_enclosed(xyz), marker=None, label=k)\n",
-    "pl.legend(loc='lower right')"
    ]
   },
   {
@@ -70,7 +55,7 @@
    },
    "outputs": [],
    "source": [
-    "name = 'spherical'\n",
+    "name = 'triaxial'\n",
     "potential = potentials[name]\n",
     "potential"
    ]
@@ -302,7 +287,126 @@
     "    data['vr'] = obs_v[2] + np.random.normal(0., err['vr'].value, size=n_data)*err['vr'].unit\n",
     "    \n",
     "    with open(\"../data/{}_{}percent.pickle\".format(name, frac_distance_err), 'wb') as f:\n",
-    "        pickle.dump((data,err), f)"
+    "        pickle.dump((data,err,R), f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Decide on integration time to set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def _mcmc_sample_to_coord(p, R):\n",
+    "    p = atleast_2d(p, insert_axis=-1) # note: from Gary, not Numpy\n",
+    "    rep = coord.SphericalRepresentation(lon=p[0]*0.*u.radian,\n",
+    "                                        lat=p[0]*u.radian, # this index looks weird but is right\n",
+    "                                        distance=p[1]*u.kpc)\n",
+    "    return coord.Galactic(orbitfit.rotate_sph_coordinate(rep, R.T))\n",
+    "\n",
+    "def _mcmc_sample_to_w0(p, R):\n",
+    "    p = atleast_2d(p, insert_axis=-1) # note: from Gary, not Numpy\n",
+    "    c = _mcmc_sample_to_coord(p, R)\n",
+    "    x0 = c.transform_to(galcen_frame['galactocentric_frame']).cartesian.xyz.decompose(galactic).value\n",
+    "    v0 = gc.vhel_to_gal(c, pm=(p[2]*u.rad/u.Myr,p[3]*u.rad/u.Myr), rv=p[4]*u.kpc/u.Myr,\n",
+    "                        **galcen_frame).decompose(galactic).value\n",
+    "    w0 = np.concatenate((x0, v0))\n",
+    "    return w0\n",
+    "\n",
+    "def plot_mcmc_sample_orbit(p, R):\n",
+    "    w0 = _mcmc_sample_to_w0(p, R)\n",
+    "    orbit = potential.integrate_orbit(w0, dt=-0.5, t1=0., t2=freeze['t_back'])\n",
+    "    orbit_c,orbit_v = orbit.to_frame(coord.Galactic, **galcen_frame)\n",
+    "\n",
+    "    fig,axes = pl.subplots(2,2,figsize=(12,8), sharex=True)\n",
+    "\n",
+    "    # l,d\n",
+    "    axes[1,0].errorbar(obs_c.l.wrap_at(180*u.deg).degree, data['distance'].value, err['distance'].value, \n",
+    "                       ls='none', marker='.', ecolor='#aaaaaa')\n",
+    "    l, = axes[1,0].plot(orbit_c.l.wrap_at(180*u.deg).degree, orbit_c.distance.value, marker=None)\n",
+    "    col = l.get_color()\n",
+    "    \n",
+    "    # l,b\n",
+    "    axes[0,0].scatter(obs_c.l.wrap_at(180*u.deg).degree, obs_c.b.degree, marker='.', c='k')\n",
+    "    axes[0,0].plot(orbit_c.l.wrap_at(180*u.deg).degree, orbit_c.b.degree, marker=None, c=col)\n",
+    "\n",
+    "    # l,mul\n",
+    "    axes[0,1].errorbar(obs_c.l.wrap_at(180*u.deg).degree, data['mul'].value, err['mul'].value, \n",
+    "                       ls='none', marker='.', ecolor='#aaaaaa')\n",
+    "    axes[0,1].plot(orbit_c.l.wrap_at(180*u.deg).degree, orbit_v[0].value, marker=None, c=col)\n",
+    "\n",
+    "    # l,mub\n",
+    "    axes[1,1].errorbar(obs_c.l.wrap_at(180*u.deg).degree, data['mub'].value, err['mub'].value, \n",
+    "                       ls='none', marker='.', ecolor='#aaaaaa')\n",
+    "    axes[1,1].plot(orbit_c.l.wrap_at(180*u.deg).degree, orbit_v[1].value, marker=None, c=col)\n",
+    "    \n",
+    "    axes[1,0].set_xlabel('$l$ [deg]')\n",
+    "    axes[1,1].set_xlabel('$l$ [deg]')\n",
+    "    \n",
+    "    fig.tight_layout()\n",
+    "    return fig,axes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "freeze = dict()\n",
+    "# these estimated from the plots\n",
+    "freeze['phi2_sigma'] = np.radians(0.9)\n",
+    "freeze['d_sigma'] = 0.15\n",
+    "freeze['vr_sigma'] = (1.5*u.km/u.s).decompose(galactic).value \n",
+    "freeze['t_forw'] = 0.\n",
+    "freeze['t_back'] = -68.\n",
+    "for k,v in potential.parameters.items():\n",
+    "    freeze['potential_{}'.format(k)] = v.value\n",
+    "\n",
+    "idx = data['phi1'].argmin()\n",
+    "p0_guess = [data['phi2'].radian[idx],\n",
+    "            data['distance'].decompose(galactic).value[idx],\n",
+    "            data['mul'].decompose(galactic).value[idx],\n",
+    "            data['mub'].decompose(galactic).value[idx],\n",
+    "            data['vr'].decompose(galactic).value[idx]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "fig,axes = plot_mcmc_sample_orbit(p0_guess, R)\n",
+    "\n",
+    "derp = orbitfit.rotate_sph_coordinate(coord.SphericalRepresentation(lon=data['phi1'][idx][None], \n",
+    "                                                                    lat=data['phi2'][idx][None],\n",
+    "                                                                    distance=data['distance'][idx][None]), R.T)\n",
+    "g = coord.Galactic(derp)\n",
+    "axes[0,0].plot(g.l.degree, g.b.degree, marker='o', color='r', alpha=0.4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "pl.plot(obs_c.l.degree, obs_v[2].to(u.km/u.s), ls='none')"
    ]
   },
   {
