--- a/notebooks/Orbit fit - make data.ipynb
+++ b/notebooks/Orbit fit - make data.ipynb
@@ -55,6 +55,7 @@
    },
    "outputs": [],
    "source": [
+    "# name = 'spherical'\n",
     "name = 'triaxial'\n",
     "potential = potentials[name]\n",
     "potential"
@@ -71,12 +72,12 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "end_c = coord.Galactic(l=125*u.degree, b=31*u.degree, distance=15*u.kpc)\n",
-    "end_v = [2.1*u.mas/u.yr, -0.25*u.mas/u.yr, -100*u.km/u.s]"
+    "end_c = coord.Galactic(l=125*u.degree, b=31*u.degree, distance=45*u.kpc)\n",
+    "end_v = [1.1*u.mas/u.yr, -0.25*u.mas/u.yr, -100*u.km/u.s]"
    ]
   },
   {
@@ -101,7 +102,7 @@
    },
    "outputs": [],
    "source": [
-    "n_steps = 4000\n",
+    "n_steps = 6000\n",
     "prog_orbit = potential.integrate_orbit(w0, dt=-1., nsteps=n_steps, t1=float(n_steps),\n",
     "                                       Integrator=gi.DOPRI853Integrator)\n",
     "prog_orbit = prog_orbit[::-1]\n",
@@ -158,7 +159,7 @@
    "source": [
     "pl.plot(prog_c.l.wrap_at(180*u.deg).degree, prog_c.b.degree, marker=None, alpha=0.25, color='b')\n",
     "pl.scatter(stream_c.l.wrap_at(180*u.deg).degree, stream_c.b.degree, \n",
-    "           c=stream_c.distance.value, cmap='Greys_r', s=4, vmin=10, vmax=20)\n",
+    "           c=stream_c.distance.value, cmap='Greys_r', s=4)\n",
     "pl.colorbar()"
    ]
   },
