change defaults for sigmas

--- a/notebooks/Orbit fit - make data.ipynb
+++ b/notebooks/Orbit fit - make data.ipynb
@@ -202,6 +202,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "pl.scatter(obs_c.l.wrap_at(180*u.deg).degree, obs_c.distance, s=4, c='k')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
