--- a/notebooks/Orbit fit - make data.ipynb
+++ b/notebooks/Orbit fit - make data.ipynb
@@ -62,6 +62,70 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "apo,per = (120., 85.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import scipy.optimize as so"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def _func(E, L, r):\n",
+    "    return 2*(E - potential.value([r,0,0]).value) - L**2/r**2\n",
+    "\n",
+    "def f(p):\n",
+    "    E,L = p\n",
+    "    return np.array([_func(E,L,apo), _func(E,L,per)])\n",
+    "\n",
+    "E0 = 0.5*0.2**2 + potential.value([(apo+per)/2.,0,0]).value[0]\n",
+    "L0 = 0.2 * (apo+per)/2.\n",
+    "E,L = so.broyden1(f, [E0, L0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# r_start = (apo+per)/2.\n",
+    "# r_start = apo\n",
+    "r_start = per+5\n",
+    "_rdot = np.sqrt(2*(E-potential.value([r_start,0,0]).value[0]) - L**2/r_start**2)\n",
+    "\n",
+    "w0 = gd.CartesianPhaseSpacePosition(pos=[-r_start/np.sqrt(2), 0, r_start/np.sqrt(2)]*u.kpc,\n",
+    "                                    vel=[_rdot/np.sqrt(2), L/r_start, -_rdot/np.sqrt(2)]*u.kpc/u.Myr)\n",
+    "# w0 = gd.CartesianPhaseSpacePosition(pos=[r_start, 0, 0]*u.kpc,\n",
+    "#                                     vel=[-_rdot, L/r_start, 0]*u.kpc/u.Myr)\n",
+    "orbit = potential.integrate_orbit(w0, dt=2., nsteps=6000)\n",
+    "\n",
+    "print(orbit.apocenter(), orbit.pericenter())"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -76,8 +140,8 @@
    },
    "outputs": [],
    "source": [
-    "end_c = coord.Galactic(l=125*u.degree, b=31*u.degree, distance=45*u.kpc)\n",
-    "end_v = [1.1*u.mas/u.yr, -0.25*u.mas/u.yr, -100*u.km/u.s]"
+    "# end_c = coord.Galactic(l=125*u.degree, b=31*u.degree, distance=100*u.kpc)\n",
+    "# end_v = [0.2*u.mas/u.yr, -0.25*u.mas/u.yr, -250*u.km/u.s]"
    ]
   },
   {
@@ -88,10 +152,10 @@
    },
    "outputs": [],
    "source": [
-    "end_c_gc = end_c.transform_to(galcen_frame['galactocentric_frame'])\n",
-    "end_v_gc = gc.vhel_to_gal(end_c, end_v[:2], end_v[2], **galcen_frame)\n",
-    "w0 = gd.CartesianPhaseSpacePosition(pos=end_c_gc.represent_as(coord.CartesianRepresentation).xyz,\n",
-    "                                    vel=end_v_gc)"
+    "# end_c_gc = end_c.transform_to(galcen_frame['galactocentric_frame'])\n",
+    "# end_v_gc = gc.vhel_to_gal(end_c, end_v[:2], end_v[2], **galcen_frame)\n",
+    "# w0 = gd.CartesianPhaseSpacePosition(pos=end_c_gc.represent_as(coord.CartesianRepresentation).xyz,\n",
+    "#                                     vel=end_v_gc)"
    ]
   },
   {
@@ -102,14 +166,12 @@
    },
    "outputs": [],
    "source": [
-    "n_steps = 6000\n",
+    "n_steps = 8000\n",
     "prog_orbit = potential.integrate_orbit(w0, dt=-1., nsteps=n_steps, t1=float(n_steps),\n",
     "                                       Integrator=gi.DOPRI853Integrator)\n",
     "prog_orbit = prog_orbit[::-1]\n",
     "fig = prog_orbit.plot()\n",
-    "fig.axes[0].plot(end_c_gc.represent_as(coord.CartesianRepresentation).xyz[0],\n",
-    "                 end_c_gc.represent_as(coord.CartesianRepresentation).xyz[1],\n",
-    "                 marker='o')"
+    "fig.axes[0].plot(w0.pos[0], w0.pos[1], marker='o')"
    ]
   },
   {
@@ -121,7 +183,7 @@
    "outputs": [],
    "source": [
     "stream = mockstream.fardal_stream(potential, prog_orbit=prog_orbit, \n",
-    "                                  prog_mass=5E5*u.Msun, release_every=1, \n",
+    "                                  prog_mass=1E7*u.Msun, release_every=1, \n",
     "                                  Integrator=gi.DOPRI853Integrator)"
    ]
   },
@@ -146,7 +208,7 @@
    "outputs": [],
    "source": [
     "fig,ax = pl.subplots(1,1,figsize=(6,6))\n",
-    "ax.plot(stream_c.l.wrap_at(180*u.degree).degree, stream_c.b.degree, ls='none', alpha=0.25)"
+    "ax.plot(stream_c.l.degree, stream_c.distance, ls='none', alpha=0.25)"
    ]
   },
   {
@@ -157,8 +219,20 @@
    },
    "outputs": [],
    "source": [
-    "pl.plot(prog_c.l.wrap_at(180*u.deg).degree, prog_c.b.degree, marker=None, alpha=0.25, color='b')\n",
-    "pl.scatter(stream_c.l.wrap_at(180*u.deg).degree, stream_c.b.degree, \n",
+    "fig,ax = pl.subplots(1,1,figsize=(6,6))\n",
+    "ax.plot(stream_c.l.degree, stream_c.b.degree, ls='none', alpha=0.25)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "pl.plot(prog_c.l, prog_c.b.degree, marker=None, alpha=0.25, color='b')\n",
+    "pl.scatter(stream_c.l, stream_c.b.degree, \n",
     "           c=stream_c.distance.value, cmap='Greys_r', s=4)\n",
     "pl.colorbar()"
    ]
@@ -180,12 +254,13 @@
    },
    "outputs": [],
    "source": [
-    "idx = np.random.permutation(np.arange(n_steps, stream_c.l.size, dtype=int)[::2])[:64]\n",
+    "np.random.seed(666)\n",
+    "idx = np.random.permutation(np.arange(n_steps, stream_c.l.size, dtype=int)[::2])[:32]\n",
     "obs_c = stream_c[idx]\n",
     "obs_v = [v[idx] for v in stream_v]\n",
     "\n",
     "# smaller region of sky\n",
-    "idx = (obs_c.l.degree > 105.) & (obs_c.l.degree < 180.) & (obs_c.b.degree > 30)\n",
+    "idx = (obs_c.l.degree > 180.) & (obs_c.distance < 95*u.kpc) & (obs_c.distance > 85*u.kpc)\n",
     "obs_c = obs_c[idx]\n",
     "obs_v = [v[idx] for v in obs_v]"
    ]
@@ -198,7 +273,7 @@
    },
    "outputs": [],
    "source": [
-    "pl.scatter(obs_c.l.wrap_at(180*u.deg).degree, obs_c.b.degree, s=4, c='k')"
+    "pl.scatter(obs_c.l, obs_c.b.degree, s=4, c='k')"
    ]
   },
   {
@@ -209,7 +284,7 @@
    },
    "outputs": [],
    "source": [
-    "pl.scatter(obs_c.l.wrap_at(180*u.deg).degree, obs_c.distance, s=4, c='k')"
+    "pl.scatter(obs_c.l, obs_c.distance, s=4, c='k')"
    ]
   },
   {
@@ -228,7 +303,7 @@
    "outputs": [],
    "source": [
     "np.random.seed(42)\n",
-    "R = orbitfit.compute_stream_rotation_matrix(obs_c, align_lon='max')"
+    "R = orbitfit.compute_stream_rotation_matrix(obs_c, align_lon='max') # WARNING: switch from max to min for triax/spher ???"
    ]
   },
   {
@@ -243,10 +318,16 @@
     "rot_rep = orbitfit.rotate_sph_coordinate(obs_c, R)\n",
     "\n",
     "pl.figure(figsize=(10,2))\n",
-    "pl.plot(rot_rep.lon.wrap_at(180*u.deg).degree, rot_rep.lat.degree, ls='none', marker='o', ms=5.)\n",
+    "pl.plot(rot_rep.lon.degree, rot_rep.lat.degree, ls='none', marker='o', ms=5.)\n",
     "pl.gca().set_aspect('equal')\n",
     "pl.xlabel(r'$\\phi_1$ [deg]')\n",
-    "pl.ylabel(r'$\\phi_2$ [deg]')"
+    "pl.ylabel(r'$\\phi_2$ [deg]')\n",
+    "\n",
+    "pl.figure(figsize=(10,3))\n",
+    "pl.plot(rot_rep.lon.degree, rot_rep.distance, ls='none', marker='o', ms=5.)\n",
+    "pl.gca().set_aspect('equal')\n",
+    "pl.xlabel(r'$\\phi_1$ [deg]')\n",
+    "pl.ylabel(r'$d$ [kpc]')"
    ]
   },
   {
@@ -275,31 +356,28 @@
    },
    "outputs": [],
    "source": [
-    "for frac_distance_err in [1, 5]:\n",
-    "    np.random.seed(42)\n",
+    "for rv_err in [10, 5, 1]:\n",
+    "    for frac_distance_err in [10, 5, 1]:\n",
+    "        np.random.seed(42)\n",
     "\n",
-    "    n_data = len(obs_c)\n",
-    "    data = dict()\n",
-    "    err = dict()\n",
+    "        n_data = len(obs_c)\n",
+    "        data = dict()\n",
+    "        err = dict()\n",
     "\n",
-    "    err['distance'] = frac_distance_err/100. * obs_c.distance\n",
-    "    err['mul'] = 0.1*u.mas/u.yr\n",
-    "    err['mub'] = 0.1*u.mas/u.yr\n",
-    "    err['vr'] = 10.*u.km/u.s\n",
-    "    # err['distance'] = 1E-6*obs_c.distance\n",
-    "    # err['mul'] = 1E-1*u.mas/u.yr\n",
-    "    # err['mub'] = 1E-1*u.mas/u.yr\n",
-    "    # err['vr'] = 1E-6*u.km/u.s\n",
+    "        err['distance'] = frac_distance_err/100. * obs_c.distance\n",
+    "        err['mul'] = 0.1*u.mas/u.yr\n",
+    "        err['mub'] = 0.1*u.mas/u.yr\n",
+    "        err['vr'] = rv_err*u.km/u.s\n",
     "\n",
-    "    data['phi1'] = rot_rep.lon\n",
-    "    data['phi2'] = rot_rep.lat\n",
-    "    data['distance'] = obs_c.distance + np.random.normal(0., err['distance'].value, size=n_data)*obs_c.distance.unit\n",
-    "    data['mul'] = obs_v[0] + np.random.normal(0., err['mul'].value, size=n_data)*err['mul'].unit\n",
-    "    data['mub'] = obs_v[1] + np.random.normal(0., err['mub'].value, size=n_data)*err['mub'].unit\n",
-    "    data['vr'] = obs_v[2] + np.random.normal(0., err['vr'].value, size=n_data)*err['vr'].unit\n",
-    "    \n",
-    "    with open(\"../data/{}_{}percent.pickle\".format(name, frac_distance_err), 'wb') as f:\n",
-    "        pickle.dump((data,err,R), f)"
+    "        data['phi1'] = rot_rep.lon\n",
+    "        data['phi2'] = rot_rep.lat\n",
+    "        data['distance'] = obs_c.distance + np.random.normal(0., err['distance'].value, size=n_data)*obs_c.distance.unit\n",
+    "        data['mul'] = obs_v[0] + np.random.normal(0., err['mul'].value, size=n_data)*err['mul'].unit\n",
+    "        data['mub'] = obs_v[1] + np.random.normal(0., err['mub'].value, size=n_data)*err['mub'].unit\n",
+    "        data['vr'] = obs_v[2] + np.random.normal(0., err['vr'].value, size=n_data)*err['vr'].unit\n",
+    "\n",
+    "        with open(\"../data/{}_d{}_rv{}.pickle\".format(name, frac_distance_err, rv_err), 'wb') as f:\n",
+    "            pickle.dump((data,err,R), f)"
    ]
   },
   {
@@ -340,25 +418,26 @@
     "\n",
     "    fig,axes = pl.subplots(2,2,figsize=(12,8), sharex=True)\n",
     "\n",
-    "    # l,d\n",
-    "    axes[1,0].errorbar(obs_c.l.wrap_at(180*u.deg).degree, data['distance'].value, err['distance'].value, \n",
+    "    # l,d \n",
+    "    # wrap_at(180*u.deg).\n",
+    "    axes[1,0].errorbar(obs_c.l.degree, data['distance'].value, err['distance'].value, \n",
     "                       ls='none', marker='.', ecolor='#aaaaaa')\n",
-    "    l, = axes[1,0].plot(orbit_c.l.wrap_at(180*u.deg).degree, orbit_c.distance.value, marker=None)\n",
+    "    l, = axes[1,0].plot(orbit_c.l.degree, orbit_c.distance.value, marker=None)\n",
     "    col = l.get_color()\n",
     "    \n",
     "    # l,b\n",
-    "    axes[0,0].scatter(obs_c.l.wrap_at(180*u.deg).degree, obs_c.b.degree, marker='.', c='k')\n",
-    "    axes[0,0].plot(orbit_c.l.wrap_at(180*u.deg).degree, orbit_c.b.degree, marker=None, c=col)\n",
+    "    axes[0,0].scatter(obs_c.l.degree, obs_c.b.degree, marker='.', c='k')\n",
+    "    axes[0,0].plot(orbit_c.l.degree, orbit_c.b.degree, marker=None, c=col)\n",
     "\n",
     "    # l,mul\n",
-    "    axes[0,1].errorbar(obs_c.l.wrap_at(180*u.deg).degree, data['mul'].value, err['mul'].value, \n",
+    "    axes[0,1].errorbar(obs_c.l.degree, data['mul'].value, err['mul'].value, \n",
     "                       ls='none', marker='.', ecolor='#aaaaaa')\n",
-    "    axes[0,1].plot(orbit_c.l.wrap_at(180*u.deg).degree, orbit_v[0].value, marker=None, c=col)\n",
+    "    axes[0,1].plot(orbit_c.l.degree, orbit_v[0].value, marker=None, c=col)\n",
     "\n",
     "    # l,mub\n",
-    "    axes[1,1].errorbar(obs_c.l.wrap_at(180*u.deg).degree, data['mub'].value, err['mub'].value, \n",
+    "    axes[1,1].errorbar(obs_c.l.degree, data['mub'].value, err['mub'].value, \n",
     "                       ls='none', marker='.', ecolor='#aaaaaa')\n",
-    "    axes[1,1].plot(orbit_c.l.wrap_at(180*u.deg).degree, orbit_v[1].value, marker=None, c=col)\n",
+    "    axes[1,1].plot(orbit_c.l.degree, orbit_v[1].value, marker=None, c=col)\n",
     "    \n",
     "    axes[1,0].set_xlabel('$l$ [deg]')\n",
     "    axes[1,1].set_xlabel('$l$ [deg]')\n",
@@ -377,11 +456,11 @@
    "source": [
     "freeze = dict()\n",
     "# these estimated from the plots\n",
-    "freeze['phi2_sigma'] = np.radians(0.9)\n",
-    "freeze['d_sigma'] = 0.15\n",
-    "freeze['vr_sigma'] = (1.5*u.km/u.s).decompose(galactic).value \n",
+    "freeze['phi2_sigma'] = None\n",
+    "freeze['d_sigma'] = None\n",
+    "freeze['vr_sigma'] = None\n",
     "freeze['t_forw'] = 0.\n",
-    "freeze['t_back'] = -68.\n",
+    "freeze['t_back'] = -150.\n",
     "for k,v in potential.parameters.items():\n",
     "    freeze['potential_{}'.format(k)] = v.value\n",
     "\n",
