change triaxial potential

--- a/notebooks/Orbit fit - make data.ipynb
+++ b/notebooks/Orbit fit - make data.ipynb
@@ -19,6 +19,7 @@
     "\n",
     "# Third-party\n",
     "import astropy.coordinates as coord\n",
+    "from astropy.coordinates.angles import rotation_matrix\n",
     "import astropy.units as u\n",
     "import matplotlib.pyplot as pl\n",
     "import numpy as np\n",
@@ -69,7 +70,7 @@
    },
    "outputs": [],
    "source": [
-    "apo,per = (120., 85.)"
+    "apo,per = (150., 75.)"
    ]
   },
   {
@@ -118,6 +119,12 @@
     "\n",
     "w0 = gd.CartesianPhaseSpacePosition(pos=[-r_start/np.sqrt(2), 0, r_start/np.sqrt(2)]*u.kpc,\n",
     "                                    vel=[_rdot/np.sqrt(2), L/r_start, -_rdot/np.sqrt(2)]*u.kpc/u.Myr)\n",
+    "# now rotate by 45 degrees\n",
+    "_R = rotation_matrix(45*u.deg, axis='z')\n",
+    "_R = rotation_matrix(45*u.deg, axis='z')\n",
+    "new_pos = _R.dot(w0.pos)\n",
+    "new_vel = _R.dot(w0.vel)\n",
+    "\n",
     "# w0 = gd.CartesianPhaseSpacePosition(pos=[r_start, 0, 0]*u.kpc,\n",
     "#                                     vel=[-_rdot, L/r_start, 0]*u.kpc/u.Myr)\n",
     "orbit = potential.integrate_orbit(w0, dt=2., nsteps=6000)\n",
@@ -255,12 +262,12 @@
    "outputs": [],
    "source": [
     "np.random.seed(666)\n",
-    "idx = np.random.permutation(np.arange(n_steps, stream_c.l.size, dtype=int)[::2])[:32]\n",
+    "idx = np.random.permutation(np.arange(n_steps, stream_c.l.size, dtype=int)[1::2])[:32]\n",
     "obs_c = stream_c[idx]\n",
     "obs_v = [v[idx] for v in stream_v]\n",
     "\n",
     "# smaller region of sky\n",
-    "idx = (obs_c.l.degree > 180.) & (obs_c.distance < 95*u.kpc) & (obs_c.distance > 85*u.kpc)\n",
+    "idx = np.ones_like(obs_v[0].value, dtype=bool) #(obs_c.l.degree > 180.) & (obs_c.distance < 95*u.kpc) & (obs_c.distance > 85*u.kpc)\n",
     "obs_c = obs_c[idx]\n",
     "obs_v = [v[idx] for v in obs_v]"
    ]
