change data again - steeper distance gradient

--- a/notebooks/Orbit fit - make data.ipynb
+++ b/notebooks/Orbit fit - make data.ipynb
@@ -56,8 +56,8 @@
    },
    "outputs": [],
    "source": [
-    "# name = 'spherical'\n",
-    "name = 'triaxial'\n",
+    "name = 'spherical'\n",
+    "# name = 'triaxial'\n",
     "potential = potentials[name]\n",
     "potential"
    ]
@@ -120,10 +120,10 @@
     "w0 = gd.CartesianPhaseSpacePosition(pos=[-r_start/np.sqrt(2), 0, r_start/np.sqrt(2)]*u.kpc,\n",
     "                                    vel=[_rdot/np.sqrt(2), L/r_start, -_rdot/np.sqrt(2)]*u.kpc/u.Myr)\n",
     "# now rotate by 45 degrees\n",
-    "_R = rotation_matrix(45*u.deg, axis='z')\n",
-    "_R = rotation_matrix(45*u.deg, axis='z')\n",
+    "_R = rotation_matrix(90*u.deg, axis='z')\n",
     "new_pos = _R.dot(w0.pos)\n",
     "new_vel = _R.dot(w0.vel)\n",
+    "w0 = gd.CartesianPhaseSpacePosition(pos=new_pos, vel=new_vel)\n",
     "\n",
     "# w0 = gd.CartesianPhaseSpacePosition(pos=[r_start, 0, 0]*u.kpc,\n",
     "#                                     vel=[-_rdot, L/r_start, 0]*u.kpc/u.Myr)\n",
@@ -261,13 +261,13 @@
    },
    "outputs": [],
    "source": [
-    "np.random.seed(666)\n",
-    "idx = np.random.permutation(np.arange(n_steps, stream_c.l.size, dtype=int)[1::2])[:32]\n",
+    "np.random.seed(42)\n",
+    "idx = np.random.permutation(np.arange(n_steps, stream_c.l.size, dtype=int)[::2])[:32]\n",
     "obs_c = stream_c[idx]\n",
     "obs_v = [v[idx] for v in stream_v]\n",
     "\n",
     "# smaller region of sky\n",
-    "idx = np.ones_like(obs_v[0].value, dtype=bool) #(obs_c.l.degree > 180.) & (obs_c.distance < 95*u.kpc) & (obs_c.distance > 85*u.kpc)\n",
+    "idx = (obs_c.l.degree > 80.)# & (obs_c.distance < 95*u.kpc) & (obs_c.distance > 85*u.kpc)\n",
     "obs_c = obs_c[idx]\n",
     "obs_v = [v[idx] for v in obs_v]"
    ]
@@ -310,7 +310,7 @@
    "outputs": [],
    "source": [
     "np.random.seed(42)\n",
-    "R = orbitfit.compute_stream_rotation_matrix(obs_c, align_lon='max') # WARNING: switch from max to min for triax/spher ???"
+    "R = orbitfit.compute_stream_rotation_matrix(obs_c, align_lon='min') # WARNING: switch from max to min for triax/spher ???"
    ]
   },
   {
@@ -467,7 +467,7 @@
     "freeze['d_sigma'] = None\n",
     "freeze['vr_sigma'] = None\n",
     "freeze['t_forw'] = 0.\n",
-    "freeze['t_back'] = -150.\n",
+    "freeze['t_back'] = -350.\n",
     "for k,v in potential.parameters.items():\n",
     "    freeze['potential_{}'.format(k)] = v.value\n",
     "\n",
