didn't integrate for long enough

--- a/notebooks/Orbit fit - make data.ipynb
+++ b/notebooks/Orbit fit - make data.ipynb
@@ -56,8 +56,8 @@
    },
    "outputs": [],
    "source": [
-    "name = 'spherical'\n",
-    "# name = 'triaxial'\n",
+    "# name = 'spherical'\n",
+    "name = 'triaxial'\n",
     "potential = potentials[name]\n",
     "potential"
    ]
@@ -381,7 +381,7 @@
     "        data['distance'] = obs_c.distance + np.random.normal(0., err['distance'].value, size=n_data)*obs_c.distance.unit\n",
     "        data['mul'] = obs_v[0] + np.random.normal(0., err['mul'].value, size=n_data)*err['mul'].unit\n",
     "        data['mub'] = obs_v[1] + np.random.normal(0., err['mub'].value, size=n_data)*err['mub'].unit\n",
-    "        data['vr'] = obs_v[2] + np.random.normal(0., err['vr'].value, size=n_data)*err['vr'].unit\n",
+    "        data['vr'] = (obs_v[2] + np.random.normal(0., err['vr'].value, size=n_data)*err['vr'].unit).to(u.km/u.s)\n",
     "\n",
     "        with open(\"../data/{}_d{}_rv{}.pickle\".format(name, frac_distance_err, rv_err), 'wb') as f:\n",
     "            pickle.dump((data,err,R), f)"
@@ -423,7 +423,7 @@
     "    orbit = potential.integrate_orbit(w0, dt=-0.5, t1=0., t2=freeze['t_back'])\n",
     "    orbit_c,orbit_v = orbit.to_frame(coord.Galactic, **galcen_frame)\n",
     "\n",
-    "    fig,axes = pl.subplots(2,2,figsize=(12,8), sharex=True)\n",
+    "    fig,axes = pl.subplots(2,3,figsize=(12,8), sharex=True)\n",
     "\n",
     "    # l,d \n",
     "    # wrap_at(180*u.deg).\n",
@@ -446,10 +446,17 @@
     "                       ls='none', marker='.', ecolor='#aaaaaa')\n",
     "    axes[1,1].plot(orbit_c.l.degree, orbit_v[1].value, marker=None, c=col)\n",
     "    \n",
-    "    axes[1,0].set_xlabel('$l$ [deg]')\n",
+    "    # l,vr\n",
+    "    axes[0,2].errorbar(obs_c.l.degree, data['vr'].to(u.km/u.s).value, err['vr'].to(u.km/u.s).value, \n",
+    "                       ls='none', marker='.', ecolor='#aaaaaa')\n",
+    "    axes[0,2].plot(orbit_c.l.degree, orbit_v[2].to(u.km/u.s).value, marker=None, c=col)\n",
+    "    \n",
     "    axes[1,1].set_xlabel('$l$ [deg]')\n",
     "    \n",
     "    fig.tight_layout()\n",
+    "    \n",
+    "    axes[1,2].set_visible(False)\n",
+    "    \n",
     "    return fig,axes"
    ]
   },
@@ -467,7 +474,7 @@
     "freeze['d_sigma'] = None\n",
     "freeze['vr_sigma'] = None\n",
     "freeze['t_forw'] = 0.\n",
-    "freeze['t_back'] = -350.\n",
+    "freeze['t_back'] = -700.\n",
     "for k,v in potential.parameters.items():\n",
     "    freeze['potential_{}'.format(k)] = v.value\n",
     "\n",
@@ -494,17 +501,6 @@
     "                                                                    distance=data['distance'][idx][None]), R.T)\n",
     "g = coord.Galactic(derp)\n",
     "axes[0,0].plot(g.l.degree, g.b.degree, marker='o', color='r', alpha=0.4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "pl.plot(obs_c.l.degree, obs_v[2].to(u.km/u.s), ls='none')"
    ]
   },
   {
