once more with feeling

--- a/notebooks/Orbit fit - make data.ipynb
+++ b/notebooks/Orbit fit - make data.ipynb
@@ -56,8 +56,8 @@
    },
    "outputs": [],
    "source": [
-    "# name = 'spherical'\n",
-    "name = 'triaxial'\n",
+    "name = 'spherical'\n",
+    "# name = 'triaxial'\n",
     "potential = potentials[name]\n",
     "potential"
    ]
@@ -189,6 +189,7 @@
    },
    "outputs": [],
    "source": [
+    "np.random.seed(42)\n",
     "stream = mockstream.fardal_stream(potential, prog_orbit=prog_orbit, \n",
     "                                  prog_mass=1E7*u.Msun, release_every=1, \n",
     "                                  Integrator=gi.DOPRI853Integrator)"
