different data again

--- a/notebooks/Orbit fit - make data.ipynb
+++ b/notebooks/Orbit fit - make data.ipynb
@@ -56,8 +56,8 @@
    },
    "outputs": [],
    "source": [
-    "name = 'spherical'\n",
-    "# name = 'triaxial'\n",
+    "# name = 'spherical'\n",
+    "name = 'triaxial'\n",
     "potential = potentials[name]\n",
     "potential"
    ]
@@ -189,7 +189,7 @@
    },
    "outputs": [],
    "source": [
-    "np.random.seed(42)\n",
+    "np.random.seed(666)\n",
     "stream = mockstream.fardal_stream(potential, prog_orbit=prog_orbit, \n",
     "                                  prog_mass=1E7*u.Msun, release_every=1, \n",
     "                                  Integrator=gi.DOPRI853Integrator)"
@@ -262,15 +262,15 @@
    },
    "outputs": [],
    "source": [
-    "np.random.seed(42)\n",
-    "idx = np.random.permutation(np.arange(n_steps, stream_c.l.size, dtype=int)[::2])[:32]\n",
+    "np.random.seed(666)\n",
+    "idx = np.random.permutation(np.arange(n_steps, stream_c.l.size, dtype=int)[::2])\n",
     "obs_c = stream_c[idx]\n",
     "obs_v = [v[idx] for v in stream_v]\n",
     "\n",
     "# smaller region of sky\n",
-    "idx = (obs_c.l.degree > 80.)# & (obs_c.distance < 95*u.kpc) & (obs_c.distance > 85*u.kpc)\n",
-    "obs_c = obs_c[idx]\n",
-    "obs_v = [v[idx] for v in obs_v]"
+    "idx = (obs_c.l.degree > 84.)# & (obs_c.distance < 95*u.kpc) & (obs_c.distance > 85*u.kpc)\n",
+    "obs_c = obs_c[idx][:32]\n",
+    "obs_v = [v[idx][:32] for v in obs_v]"
    ]
   },
   {
@@ -475,7 +475,7 @@
     "freeze['d_sigma'] = None\n",
     "freeze['vr_sigma'] = None\n",
     "freeze['t_forw'] = 0.\n",
-    "freeze['t_back'] = -700.\n",
+    "freeze['t_back'] = -600.\n",
     "for k,v in potential.parameters.items():\n",
     "    freeze['potential_{}'.format(k)] = v.value\n",
     "\n",
